--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opencuboids-client"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
 authors = ["Calbabreaker <calbabreaker@gmail.com>"]
 
@@ -8,6 +8,8 @@ authors = ["Calbabreaker <calbabreaker@gmail.com>"]
 bevy_ecs = "0.7.0"
 bytemuck = { version = "1.9.1", features = ["derive"] }
 env_logger = "0.9.0"
+glam = "0.20.5"
+image = { version = "0.24.1", default-features = false, features = ["png", "jpeg"] }
 pollster = "0.2.5"
 wgpu = "0.12.0"
 winit = "0.26.1"
