--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,10 +6,11 @@ authors = ["Calbabreaker <calbabreaker@gmail.com>"]
 
 [dependencies]
 bevy_ecs = "0.7.0"
-bytemuck = { version = "1.9.1", features = ["derive"] }
+bevy_utils = "0.7.0"
+bytemuck = { version = "1.10.0", features = ["derive"] }
 env_logger = "0.9.0"
-glam = "0.20.5"
-image = { version = "0.24.1", default-features = false, features = ["png", "jpeg"] }
+glam = { version = "0.21.2", features = ["bytemuck"] }
+image = { version = "0.24.2", default-features = false, features = ["png", "jpeg"] }
 pollster = "0.2.5"
-wgpu = "0.12.0"
+wgpu = "0.13.1"
 winit = "0.26.1"
