--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,11 +9,12 @@ bevy_app = "0.7.0"
 bevy_ecs = "0.7.0"
 bevy_utils = "0.7.0"
 bytemuck = { version = "1.10.0", features = ["derive"] }
-env_logger = "0.9.0"
 glam = { version = "0.21.2", features = ["bytemuck"] }
 image = { version = "0.24.2", default-features = false, features = ["png"] }
+log = "0.4.17"
 pollster = "0.2.5"
 wgpu = "0.13.1"
 winit = "0.26.1"
+
 opencuboids-common = { path = "../common" }
-log = "0.4.17"
+opencuboids-server = { path = "../server" }
