--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "opencuboids-common"
+name = "opencuboids-server"
 version = "0.0.0"
 edition = "2021"
 authors = ["Calbabreaker <calbabreaker@gmail.com>"]
 
 [dependencies]
-env_logger = "0.9.0"
-glam = "0.21.2"
 log = "0.4.17"
+
+opencuboids-common = { path = "../common" }
