--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 authors = ["Calbabreaker <calbabreaker@gmail.com>"]
 
 [dependencies]
+bincode = "1.3.3"
 env_logger = "0.9.0"
-glam = "0.21.2"
+glam = { version = "0.21.3", features = ["serde"] }
 log = "0.4.17"
+serde = { version = "1.0", features = ["derive"] }
