--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 authors = ["Calbabreaker <calbabreaker@gmail.com>"]
 
 [dependencies]
-log = "0.4.17"
-
 opencuboids-common = { path = "../common" }
+
+log = "0.4.17"
+glam = "0.21.3"
